RIA-7668 Add logic for pre-populated data